--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,5 +1,5 @@
-jesque.web.brand = Jesque-Web 0.5.0
-jesque.web.title = Jesque-Web 0.5.0 -  {0}
+jesque.web.brand = Jesque
+jesque.web.title = Jesque - {0}
 
 jesque.web.nav.overview = Overview
 jesque.web.nav.working = Working
